--- a/gui/static/settings.html
+++ b/gui/static/settings.html
@@ -6,6 +6,7 @@
       <div class="tabs browser-tabs settings-tabs" id="settings-tabs">
         <button class="tab-btn active" data-tab="settings-general" data-i18n="settings.tabs.general">General</button>
         <button class="tab-btn" data-tab="settings-advanced" data-i18n="settings.tabs.advanced">Advanced</button>
+        <button class="tab-btn" data-tab="settings-cleanup" data-i18n="settings.tabs.cleanup">Cleanup</button>
         <button class="tab-btn" data-tab="settings-https" data-i18n="settings.tabs.https">HTTPS</button>
         <button class="tab-btn" data-tab="settings-hardening" data-i18n="settings.tabs.hardening">Hardening</button>
         <button class="tab-btn" data-tab="settings-tags" data-i18n="settings.tabs.tags">Tags</button>
@@ -151,6 +152,42 @@
             </div>
           </div>
 
+        </div>
+
+        <div class="tab-panel settings-panel" id="settings-cleanup" data-tab="settings-cleanup" hidden>
+          <div class="card nested-card" id="tabs-cleanup-section" hidden>
+            <div class="card-header">
+              <div>
+                <h3 data-i18n="settings.tabsCleanupTitle">Tabs cleanup</h3>
+                <p class="muted" data-i18n="settings.tabsCleanupHint">Clear local settings and cache.</p>
+              </div>
+            </div>
+            <div class="card-body">
+              <div class="form-grid single-column">
+                <div class="form-field">
+                  <label data-i18n="settings.tabsCleanupScope">Tab</label>
+                  <div class="settings-cleanup-grid" id="tabs-cleanup-options">
+                    <label class="checkbox"><input type="checkbox" value="dashboard"><span data-i18n="nav.dashboard">Dashboard</span></label>
+                    <label class="checkbox"><input type="checkbox" value="monitoring"><span data-i18n="nav.monitoring">Monitoring</span></label>
+                    <label class="checkbox"><input type="checkbox" value="controls"><span data-i18n="nav.controls">Controls</span></label>
+                    <label class="checkbox"><input type="checkbox" value="tasks"><span data-i18n="nav.tasks">Tasks</span></label>
+                    <label class="checkbox"><input type="checkbox" value="incidents"><span data-i18n="nav.incidents">Incidents</span></label>
+                    <label class="checkbox"><input type="checkbox" value="reports"><span data-i18n="nav.reports">Reports</span></label>
+                    <label class="checkbox"><input type="checkbox" value="docs"><span data-i18n="nav.docs">Docs</span></label>
+                    <label class="checkbox"><input type="checkbox" value="accounts"><span data-i18n="nav.accounts">Accounts</span></label>
+                    <label class="checkbox"><input type="checkbox" value="logs"><span data-i18n="nav.logs">Logs</span></label>
+                    <label class="checkbox"><input type="checkbox" value="settings"><span data-i18n="nav.settings">Settings</span></label>
+                  </div>
+                  <div class="settings-inline-row settings-cleanup-actions">
+                    <button type="button" class="btn ghost settings-compact-action" id="tabs-cleanup-select-all" data-i18n="common.selectAll">Select all</button>
+                    <button type="button" class="btn ghost settings-compact-action" id="tabs-cleanup-clear-all" data-i18n="common.clear">Clear</button>
+                    <button type="button" class="btn danger settings-compact-action" id="tabs-cleanup-btn" data-i18n="settings.tabsCleanupRun">Clean up</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="card nested-card" id="approvals-cleanup-section" hidden>
             <div class="card-header">
               <div>
@@ -168,37 +205,6 @@
                       <option value="all" data-i18n="settings.approvalsCleanupAll">All approvals</option>
                     </select>
                     <button type="button" class="btn danger settings-compact-action" id="approvals-cleanup-btn" data-i18n="settings.approvalsCleanupRun">Clean up</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="card nested-card" id="tabs-cleanup-section" hidden>
-            <div class="card-header">
-              <div>
-                <h3 data-i18n="settings.tabsCleanupTitle">Tabs cleanup</h3>
-                <p class="muted" data-i18n="settings.tabsCleanupHint">Clear local settings and cache.</p>
-              </div>
-            </div>
-            <div class="card-body">
-              <div class="form-grid single-column">
-                <div class="form-field">
-                  <label for="tabs-cleanup-target" data-i18n="settings.tabsCleanupScope">Tab</label>
-                  <div class="settings-inline-row">
-                    <select id="tabs-cleanup-target" class="select">
-                      <option value="dashboard" data-i18n="nav.dashboard">Dashboard</option>
-                      <option value="monitoring" data-i18n="nav.monitoring">Monitoring</option>
-                      <option value="controls" data-i18n="nav.controls">Controls</option>
-                      <option value="tasks" data-i18n="nav.tasks">Tasks</option>
-                      <option value="incidents" data-i18n="nav.incidents">Incidents</option>
-                      <option value="reports" data-i18n="nav.reports">Reports</option>
-                      <option value="docs" data-i18n="nav.docs">Docs</option>
-                      <option value="accounts" data-i18n="nav.accounts">Accounts</option>
-                      <option value="logs" data-i18n="nav.logs">Logs</option>
-                      <option value="settings" data-i18n="nav.settings">Settings</option>
-                    </select>
-                    <button type="button" class="btn danger settings-compact-action" id="tabs-cleanup-btn" data-i18n="settings.tabsCleanupRun">Clean up</button>
                   </div>
                 </div>
               </div>
@@ -422,6 +428,23 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal confirm-modal" id="settings-cleanup-confirm-modal" hidden>
+    <div class="modal-backdrop"></div>
+    <div class="modal-body">
+      <div class="modal-header">
+        <h3 id="settings-cleanup-confirm-title" data-i18n="common.confirm">Confirm</h3>
+        <button class="btn ghost" id="settings-cleanup-confirm-close" aria-label="Close">x</button>
+      </div>
+      <div class="modal-content">
+        <div id="settings-cleanup-confirm-message" class="confirm-message"></div>
+        <div class="form-actions">
+          <button type="button" class="btn primary" id="settings-cleanup-confirm-yes" data-i18n="common.confirm">Confirm</button>
+          <button type="button" class="btn ghost" id="settings-cleanup-confirm-no" data-i18n="common.cancel">Cancel</button>
         </div>
       </div>
     </div>
