--- a/gui/static/app.html
+++ b/gui/static/app.html
@@ -120,6 +120,7 @@
   <script src="/static/js/backups/backups_page.js"></script>
   <script src="/static/js/backups/tabs/overview.js"></script>
   <script src="/static/js/backups/tabs/history.js"></script>
+  <script src="/static/js/backups/tabs/contents.js"></script>
   <script src="/static/js/backups/tabs/restore.js"></script>
   <script src="/static/js/backups/tabs/plan.js"></script>
   <script src="/static/js/app.js"></script>
